syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "UpdateTestingRollbackProto";

package liquibase;

service UpdateTestingRollbackService {
  rpc execute(UpdateTestingRollbackRequest) returns (Response) {}
}

/* Updates database, then rolls back changes before updating again. Useful for testing rollback support */
message UpdateTestingRollbackRequest {
  optional string change_exec_listener_class = 1; // Fully-qualified class which specifies a ChangeExecListener
  optional string change_exec_listener_properties_file = 2; // Path to a properties file for the ChangeExecListenerClass
  string changelog_file = 3; // *required* The root changelog file
  optional string context_filter = 4; // Context string to use for filtering
  optional string default_catalog_name = 5; // The default catalog name to use for the database connection
  optional string default_schema_name = 6; // The default schema name to use for the database connection
  optional string driver = 7; // The JDBC driver class
  optional string driver_properties_file = 8; // The JDBC driver properties file
  optional string label_filter = 9; // Label expression to use for filtering
  optional string password = 10; // Password to use to connect to the database
  optional bool rollback_on_error = 11; // If set to true and any changeset in a deployment fails, then the update operation stops, and liquibase attempts to rollback all changesets just deployed. A changeset marked "fail-on-error=false" does not trigger as an error, therefore rollback-on-error will not occur. Additionally, if a changeset is not auto-rollback compliant or does not have a rollback script, then no rollback-on-error will occur for any changeset.
  string url = 12; // *required* The JDBC database connection URL
  optional string username = 13; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 14;
}

message Response {
  string message = 1;
}
